<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/actMain_btnSignUP"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_weight="50"
                android:background="@drawable/radius_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/actMain_btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="50"
                android:background="@drawable/radius_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/actMain_tvStartUsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/start_using_without_an_account"
            android:textAlignment="center"
            android:textColor="#b0b9cd"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
