<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <include
        layout="@layout/action_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/splash_screen_text"
            android:layout_gravity="center"
            android:padding="10dp"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:padding="2dp"
            android:background="@drawable/background_button"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/common_google_signin_btn_icon_light_normal"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:textSize="15sp"
                android:textColor="#6F6F6F"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
        <ImageView
            android:layout_width="265dp"
            android:layout_height="30dp"
            android:layout_margin="7dp"
            android:layout_gravity="center"
            android:src="@drawable/or_login_divider"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_button"
            android:padding="4dp"

            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/stackexchange_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_using_stack_exchange"
                android:textSize="15sp"
                android:textColor="#326EB6"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_button"
            android:padding="4dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/openid_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_using_another_openid"
                android:textSize="15sp"
                android:textColor="#326EB6"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginRight="30dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>


